	  or reliably detect type of statements when they're used.

	- Fixed BUG#24065 - Better error message when server doesn't return enough
	  information to determine stored procedure/function parameter types.
	  
	- Fixed BUG#21438 - Driver sending nanoseconds to server for timestamps when
	  using server-side prepared statements, when server expects microseconds.
	  	  	  	   	  	   
10-20-06 - Version 5.0.4

    - Fixed BUG#21379 - column names don't match metadata in cases 
      where server doesn't return original column names (column functions)
	  thus breaking compatibility with applications that expect 1-1 mappings
	  between findColumn() and rsmd.getColumnName(), usually manifests itself
	  as "Can't find column ('')" exceptions.
	 
    - Fixed BUG#21544 - When using information_schema for metadata, 
	  COLUMN_SIZE for getColumns() is not clamped to range of 
	  java.lang.Integer as is the case when not using 
	  information_schema, thus leading to a truncation exception that 
	  isn't present when not using information_schema.
	 
    - Fixed configuration property "jdbcCompliantTruncation" was not
      being used for reads of result set values.
      
    - Fixed BUG#22024 - Newlines causing whitespace to span confuse
	  procedure parser when getting parameter metadata for stored 
	  procedures.
	  
	- Driver now supports {call sp} (without "()" if procedure has no
	  arguments).
	  
	- Fixed BUG#22359 - Driver was using milliseconds for
	  Statement.setQueryTimeout() when specification says argument is
	  to be in seconds.
	  
	- Workaround for server crash when calling stored procedures
	  via a server-side prepared statement (driver now detects 
	  prepare(stored procedure) and substitutes client-side prepared 
	  statement), addresses BUG#22297.
	  
	- Added new _ci collations to CharsetMapping, fixing 
	  Bug#22456 - utf8_unicode_ci not working.
	  
	- Fixed BUG#22290 - Driver issues truncation on write exception when