@@ -45,7 +45,10 @@ nn-nn-06 - Version 5.0.5
 	  
 	- Fixed BUG#21438 - Driver sending nanoseconds to server for timestamps when
 	  using server-side prepared statements, when server expects microseconds.
-	  	  	  	   	  	   
+
+	- Fixed BUG#25514 - Timer instance used for Statement.setQueryTimeout()
+	  created per-connection, rather than per-VM, causing memory leak
+	  	  	  	  	   	  	   
 10-20-06 - Version 5.0.4
 
     - Fixed BUG#21379 - column names don't match metadata in cases 
